kubernetes/kube-deploy-template/resource/core/gateway/grpc.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: grpc
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: ca-clusterissuer-self-signed
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: GRPCRoute
        namespaces:
          from: All
    - name: grpc
      port: 443
      protocol: HTTPS
      hostname: "*.rpc.local"
      allowedRoutes:
        kinds:
          - kind: GRPCRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: grpc-gw-cert
